--- a/www/index.html
+++ b/www/index.html
@@ -977,7 +977,7 @@
                             <br>
                         </div>
                     </div>
-                    <div class="row" style="text-align: right;">
+                    <div class="row">
                         <div class="col-6 col-sm-4 col-md-3 col-lg-2" style="align-self: flex-end;">
                             <a>float</a>
                         </div>
