--- a/www/index.html
+++ b/www/index.html
@@ -1151,6 +1151,13 @@
                         <br>
                         <div class="row">
                             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                                <a>Uniform Value</a>
+                                <br>
+                                <br>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                                 <textarea id="algorithm_javascript" rows="8"
                                     style="text-align:left; border: 1px solid #FFF;"
                                     placeholder="Enter JavaScript here..." value="{{algorithm.client}}"></textarea>
