--- a/www/index.html
+++ b/www/index.html
@@ -573,7 +573,7 @@
 
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
-                            <a>Algorithm Title</a>
+                            <a>Algorithm Title:</a>
                             <br>
                             <br>
                         </div>
@@ -587,7 +587,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <a>Algorithm Description</a>
+                            <a>Algorithm Description:</a>
                             <br>
                         </div>
                     </div>
@@ -601,7 +601,7 @@
                     <br>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
-                            <a>Public</a>
+                            <a>Public:</a>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                         </div>
@@ -617,7 +617,7 @@
                     <br>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
-                            <a>HTML</a>
+                            <a>HTML:</a>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                         </div>
@@ -641,7 +641,7 @@
                     <br>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
-                            <a>JavaScript</a>
+                            <a>JavaScript:</a>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                         </div>
@@ -673,7 +673,7 @@
                     style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <a>Image Files</a>
+                            <a>Image Files:</a>
                             <br>
                         </div>
                     </div>
@@ -689,7 +689,7 @@
                     style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <a>Sound Files</a>
+                            <a>Sound Files:</a>
                             <br>
                         </div>
                     </div>
@@ -705,7 +705,7 @@
                     style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <a>Video Files</a>
+                            <a>Video Files:</a>
                             <br>
                         </div>
                     </div>
@@ -726,7 +726,7 @@
                     style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
-                            <a>Context Identifier</a>
+                            <a>Context Identifier:</a>
                             <br>
                             <br>
                         </div>
@@ -740,7 +740,7 @@
                     </div>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
-                            <a>Depth Component</a>
+                            <a>Depth Component:</a>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                         </div>
@@ -757,7 +757,7 @@
                     <div class="row" style="border-top: 1px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <br>
-                            <a>Context Width</a>
+                            <a>Context Width:</a>
                             <br>
                             <br>
                         </div>
@@ -840,7 +840,7 @@
                     <div class="row" style="border-top: 1px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <br>
-                            <a>Context Height</a>
+                            <a>Context Height:</a>
                             <br>
                             <br>
                         </div>
@@ -948,7 +948,7 @@
                     style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
-                            <a>Program Identifier</a>
+                            <a>Program Identifier:</a>
                             <br>
                             <br>
                         </div>
@@ -965,7 +965,7 @@
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <br>
-                            <a>Uniform Variables</a>
+                            <a>Uniform Variables:</a>
                         </div>
                     </div>
                     <div
@@ -973,7 +973,7 @@
 
                         <div class="row">
                             <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
-                                <a>Uniform Identifier</a>
+                                <a>Uniform Identifier:</a>
                                 <br>
                                 <br>
                             </div>
@@ -989,7 +989,7 @@
                         <br>
                         <div class="row">
                             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                                <a>Uniform Value</a>
+                                <a>Uniform Value:</a>
                                 <br>
                                 <br>
                             </div>
@@ -1005,7 +1005,7 @@
                         <br>
                         <div class="row">
                             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                                <a>Uniform Type</a>
+                                <a>Uniform Type:</a>
                                 <br>
                                 <br>
                             </div>
